// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Config API tests layers get should get the active layer 1`] = `
Object {
  "exists": true,
  "global": false,
  "path": "project.config.user.json",
  "properties": Object {
    "defaults": Object {
      "fruit": "fruit.apple",
    },
    "plugins": CommentArray [
      "@zowe/fruit-for-imperative",
    ],
    "profiles": Object {
      "fruit": Object {
        "profiles": Object {
          "apple": Object {
            "properties": Object {
              "color": "red",
            },
            "type": "fruit",
          },
          "orange": Object {
            "properties": Object {
              "color": "orange",
            },
            "type": "fruit",
          },
        },
        "properties": Object {
          "origin": "California",
        },
      },
    },
    "secure": CommentArray [],
  },
  "user": true,
}
`;

exports[`Config API tests layers merge should merge config layers with correct priority 1`] = `
Object {
  "defaults": Object {
    "fruit": "fruit.apple",
  },
  "plugins": Array [
    "@zowe/fruit-for-imperative",
    "@zowe/vegetable-for-imperative",
  ],
  "profiles": Object {
    "fruit": Object {
      "profiles": Object {
        "apple": Object {
          "properties": Object {
            "color": "red",
          },
          "type": "fruit",
        },
        "grape": Object {
          "properties": Object {
            "color": "red",
          },
          "type": "fruit",
        },
        "orange": Object {
          "properties": Object {
            "color": "orange",
          },
          "type": "fruit",
        },
      },
      "properties": Object {
        "origin": "California",
        "shipDate": "2000-01-01",
      },
    },
  },
  "secure": Array [
    "profiles.fruit.properties.secret",
  ],
}
`;

exports[`Config API tests layers set should set the current layer 1`] = `
Object {
  "$schema": "fake",
  "defaults": Object {},
  "plugins": CommentArray [],
  "profiles": Object {
    "vegetable": Object {
      "properties": Object {
        "color": "brown",
        "origin": "California",
      },
    },
  },
  "secure": CommentArray [],
}
`;

exports[`Config API tests layers set should set the current layer when nothing is provided 1`] = `
Object {
  "defaults": Object {},
  "plugins": CommentArray [],
  "profiles": Object {},
  "secure": CommentArray [],
}
`;

exports[`Config API tests layers write should save the active config layer 1`] = `
"{
    \\"profiles\\": {
        \\"fruit\\": {
            \\"properties\\": {
                \\"origin\\": \\"California\\"
            },
            \\"profiles\\": {
                \\"apple\\": {
                    \\"type\\": \\"fruit\\",
                    \\"properties\\": {
                        \\"color\\": \\"red\\"
                    }
                },
                \\"orange\\": {
                    \\"type\\": \\"fruit\\",
                    \\"properties\\": {
                        \\"color\\": \\"orange\\"
                    }
                }
            }
        }
    },
    \\"defaults\\": {
        \\"fruit\\": \\"fruit.apple\\"
    },
    \\"plugins\\": [
        \\"@zowe/fruit-for-imperative\\"
    ],
    \\"secure\\": []
}"
`;

exports[`Config API tests plugins get should get the plugins 1`] = `
Array [
  "@zowe/fruit-for-imperative",
]
`;

exports[`Config API tests profiles defaultGet should get the default profile 1`] = `
Object {
  "color": "red",
  "origin": "California",
}
`;

exports[`Config API tests profiles get should get a first level profile 1`] = `
Object {
  "origin": "California",
}
`;

exports[`Config API tests profiles get should get a second level profile 1`] = `
Object {
  "color": "red",
  "origin": "California",
}
`;

exports[`Config API tests profiles set should set a first level profile 1`] = `
Object {
  "color": "green",
}
`;

exports[`Config API tests profiles set should set a second level profile 1`] = `
Object {
  "origin": "California",
}
`;

exports[`Config API tests profiles set should set a second level profile 2`] = `
Object {
  "color": "green",
  "origin": "California",
}
`;

exports[`Config API tests profiles set should set a second level profile to a first level profile that doesn't exist 1`] = `
Object {
  "color": "brown",
}
`;

exports[`Config API tests profiles set should set a second level profile to a first level profile that doesn't exist 2`] = `
Object {
  "color": "brown",
}
`;
